# ChangeLog for net-news/canto
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jul 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.0.ebuild, +canto-0.4.1.ebuild:
  Version bump.

  05 Jul 2008; Jack Miller (TheMoken) jack@codezen.org +canto-9999.ebuild:
  Add git ebuild.

  04 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  canto-0.4.0.ebuild:
  Add ~amd64 keyword

  04 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  canto-0.4.0.ebuild:
  Use distutils

  03 Jul 2008; Jack Miller (TheMoken) jack@codezen.org +canto-0.4.0.ebuild,
  +metadata.xml:
  First release.
