@@ -1,5 +1,5 @@
 DIST canto-0.4.1.tar.gz 25479 RMD160 52f78a3430dba9568a36d882ad1ffc86dd6b8545 SHA1 9778ce1c1249e9aed1ef8bb81a79502fa61449ec SHA256 f2510aa2664b581652d70d30e7d8b153b807dabea3b52ad275170951a2fe03d8
-EBUILD canto-0.4.1.ebuild 409 RMD160 9dd660b5b1851d3d0d39bebbb184b6d46786b58c SHA1 f9d6d5f14b1995f4cd85526818243573fa1954f3 SHA256 5a5abd100c00fdf882d7c11dddcec0c1b2905305449c2bf1acaf92a8ee2ea33b
+EBUILD canto-0.4.1.ebuild 364 RMD160 0c16af4d35e44a8ce620376d071e6cde73decdce SHA1 c293b37ace15904f3dec9a2e807274fc7b2c1004 SHA256 8fbba26f0cb087f2dbeb2041bfe2e9435771ade25b6ff1b41de0dc0bf5c1999a
 EBUILD canto-9999.ebuild 381 RMD160 4693bec570af38994cd528092947419a836dad37 SHA1 c5bcd3038229bbf85ea618d74e2fc5479d658eb9 SHA256 f30c13050ba039425f3c5fd3447c460f63f73a155b8c7baabfaeb3916aae306c
-MISC ChangeLog 639 RMD160 67c02aef8caa1a90268f4ebe82f155ae365a649f SHA1 ab9c149bb9df4323f7956ace3ca2f201300e8c2b SHA256 1002abd1166603901e9b236959a46a3b601f7f81948b5a1e349da110cdf65e82
+MISC ChangeLog 732 RMD160 f223fc4f4d11fdecea14f290f21d52684ce17842 SHA1 33388aa45c8b5acd323b76c52da3add0e795241d SHA256 a080869b09c192b115f2d8fa8a4d370e7355926dac005878413d8a34e8a94c0c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
